SFQBD/Ebiz/force-app/main/default/objects/Contact/fields/EBizCharge_Amount__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Amount__c</fullName>
    <formula>Account.EBizCharge_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBizCharge Amount Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>