SFQBD/Ebiz/force-app/main/default/objects/Contact/fields/EBizCharge_Contact_Amount__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Contact_Amount__c</fullName>
    <label>EBizCharge Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>