SFQBD/Ebiz/force-app/main/default/objects/Contact/fields/EBizCharge_Contact_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Contact_Internal_ID__c</fullName>
    <label>EBizCharge Internal ID Contact</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>