SFQBD/Ebiz/force-app/main/default/objects/Contact/fields/EBizCharge_Contact_Need_to_Sync__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Contact_Need_to_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EBizCharge Contact Need to Sync</label>
    <type>Checkbox</type>
</CustomField>