SFQBD/Ebiz/force-app/main/default/objects/Contact/fields/EBizCharge_Contact_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Contact_Reference_Number__c</fullName>
    <label>EBizCharge Reference Number Contact</label>
    <length>20</length>
    <type>Text</type>
</CustomField>