SFQBD/Ebiz/force-app/main/default/objects/Contact/fields/EBizCharge_Contact_Tax__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Contact_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>EBizCharge Tax Contact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>