SFQBD/Ebiz/force-app/main/default/objects/Contact/fields/EBizCharge_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Internal_ID__c</fullName>
    <formula>Account.EBizCharge_Internal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBizCharge Internal ID Account</label>
    <type>Text</type>
</CustomField>