SFQBD/Ebiz/force-app/main/default/objects/Contact/fields/EBizCharge_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>EBizCharge_Reference_Number__c</fullName>
    <formula>Account.EBizCharge_Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBizCharge Reference Number Account</label>
    <type>Text</type>
</CustomField>